horizontal scroll fix

--- a/web/week2/week2.css
+++ b/web/week2/week2.css
@@ -18,7 +18,6 @@ ul {
 footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
     height: 2.5rem;
     font-weight: bold;
 }
